--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a class="navbar-brand" id="home" href="index.html">Home</a>
         <a class="navbar-brand" id="mygoals" href="http://www.google.com">My Goals</a>
         <a class="navbar-brand" id="myforest" href="http://www.google.com">My Forest</a>
-        <a class="navbar-brand" id="contact" href="http://www.google.com">Contact</a>
+        <a class="navbar-brand" id="contact" href="contact.html">Contact</a>
     </nav>
     
     <section id="section-list" >
@@ -41,9 +41,8 @@
             </div>-->
     </section>
     <section id="section-add">
-            <input id="input-Add" type="text" placeholder="Add A New Goal"></input>
-            <input id="buttonAdd" type="submit" class="btn btn-success" value="Add"></input>
-        
+            <input id="input-Add" type="text" placeholder="Add A New Goal">
+            <input id="buttonAdd" type="submit" class="btn btn-success" value="Add">
     </section>
 
     <footer>Copyright &copy;</footer>
